# Globant-DE-Tech

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: backup.py  batch.py  departments.py  employees.py  jobs.py  metrics.py  migration.py  restore.py
app/core/: config.py
app/db/: base.py  init_db.py  session.py
app/models/: __init__.py  department.py  employee.py  job.py
app/schemas/: __init__.py  batch.py  department.py  employee.py  job.py  metric.py
app/services/: backup_service.py  batch_processor.py  csv_loader.py  metrics_service.py  restore_service.py
app/utils/: validators.py
tests/: conftest.py
tests/api/v1/: test_endpoints.py
